# fi_os

./: .gitignore  Cargo.toml  shell.nix
fi_kernel/: Cargo.toml
fi_stdlib/: Cargo.toml
fi_stdlib/src/: lib.rs  posix.rs
fi_uefi/: Cargo.toml
fi_uefi/src/: lib.rs
src/: main.rs
